[gd_scene load_steps=45 format=2]

[ext_resource path="res://assets/misc/enemy-move-01.png" type="Texture" id=1]
[ext_resource path="res://Mob.gd" type="Script" id=2]
[ext_resource path="res://assets/misc/guy-down.png" type="Texture" id=3]
[ext_resource path="res://assets/misc/exp2.png" type="Texture" id=4]
[ext_resource path="res://assets/Sound/hitted.ogg" type="AudioStream" id=5]
[ext_resource path="res://assets/Yu/Battle Effects/vr_bc600_00.png" type="Texture" id=6]
[ext_resource path="res://ParticleBooming.tscn" type="PackedScene" id=7]

[sub_resource type="AtlasTexture" id=16]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 0, 0, 70, 84 )

[sub_resource type="AtlasTexture" id=17]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 74, 0, 74, 84 )

[sub_resource type="AtlasTexture" id=18]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 0, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=19]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 64, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=20]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 128, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=21]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 192, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=22]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 0, 64, 64, 64 )

[sub_resource type="AtlasTexture" id=23]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 64, 64, 64, 64 )

[sub_resource type="AtlasTexture" id=24]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 128, 64, 64, 64 )

[sub_resource type="AtlasTexture" id=25]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 192, 64, 64, 64 )

[sub_resource type="AtlasTexture" id=34]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 0, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=35]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 64, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=36]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 128, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=37]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 192, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=38]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 0, 64, 64, 64 )

[sub_resource type="AtlasTexture" id=39]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 64, 64, 64, 64 )

[sub_resource type="AtlasTexture" id=40]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 128, 64, 64, 64 )

[sub_resource type="AtlasTexture" id=41]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 192, 64, 64, 64 )

[sub_resource type="AtlasTexture" id=42]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 0, 128, 64, 64 )

[sub_resource type="AtlasTexture" id=43]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 64, 128, 64, 64 )

[sub_resource type="AtlasTexture" id=44]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 128, 128, 64, 64 )

[sub_resource type="AtlasTexture" id=45]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 192, 128, 64, 64 )

[sub_resource type="AtlasTexture" id=46]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 0, 192, 64, 64 )

[sub_resource type="AtlasTexture" id=47]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 64, 192, 64, 64 )

[sub_resource type="AtlasTexture" id=48]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 128, 192, 64, 64 )

[sub_resource type="AtlasTexture" id=49]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 192, 192, 64, 64 )

[sub_resource type="AtlasTexture" id=61]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 57, 98 )

[sub_resource type="AtlasTexture" id=55]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 54, 0, 54, 98 )

[sub_resource type="AtlasTexture" id=56]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 168, 0, 56, 98 )

[sub_resource type="AtlasTexture" id=57]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 224, 0, 56, 98 )

[sub_resource type="AtlasTexture" id=58]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 290, 0, 58, 98 )

[sub_resource type="AtlasTexture" id=59]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 399, 0, 57, 98 )

[sub_resource type="AtlasTexture" id=60]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 456, 0, 57, 98 )

[sub_resource type="SpriteFrames" id=10]
animations = [ {
"frames": [ SubResource( 16 ), SubResource( 17 ), SubResource( 18 ), SubResource( 19 ), SubResource( 20 ), SubResource( 21 ), SubResource( 22 ), SubResource( 23 ), SubResource( 24 ), SubResource( 25 ), SubResource( 34 ), SubResource( 35 ), SubResource( 36 ), SubResource( 37 ), SubResource( 38 ), SubResource( 39 ), SubResource( 40 ), SubResource( 41 ), SubResource( 42 ), SubResource( 43 ), SubResource( 44 ), SubResource( 45 ), SubResource( 46 ), SubResource( 47 ), SubResource( 48 ), SubResource( 49 ) ],
"loop": true,
"name": "hitted",
"speed": 4.0
}, {
"frames": [ SubResource( 61 ), SubResource( 55 ), SubResource( 56 ), SubResource( 57 ), SubResource( 58 ), SubResource( 59 ), SubResource( 60 ) ],
"loop": true,
"name": "walk",
"speed": 3.0
} ]

[sub_resource type="RectangleShape2D" id=53]
extents = Vector2( 46.5, 36.5 )

[sub_resource type="AtlasTexture" id=51]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 0, 0, 30, 35 )

[sub_resource type="SpriteFrames" id=52]
animations = [ {
"frames": [ SubResource( 51 ), null, SubResource( 51 ), null, SubResource( 51 ), null, SubResource( 51 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[node name="Mob" type="RigidBody2D"]
position = Vector2( 103.772, 59.977 )
collision_mask = 0
gravity_scale = 0.0
script = ExtResource( 2 )
__meta__ = {
"_edit_group_": true
}
particleBooming = ExtResource( 7 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( -24.4656, 4.00001 )
scale = Vector2( 1.35415, 1.1551 )
frames = SubResource( 10 )
animation = "walk"
speed_scale = 5.0
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -21.272, 1.52304 )
rotation = 1.5708
shape = SubResource( 53 )

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]

[node name="SoundDown" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 5 )
volume_db = 8.756

[node name="Alerting" type="AnimatedSprite" parent="."]
position = Vector2( 27.228, -31.477 )
scale = Vector2( 0.733334, 0.657143 )
frames = SubResource( 52 )
frame = 4
playing = true

[connection signal="animation_finished" from="AnimatedSprite" to="." method="_on_AnimatedSprite_animation_finished"]
[connection signal="frame_changed" from="AnimatedSprite" to="." method="_on_AnimatedSprite_frame_changed"]
[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]
[connection signal="finished" from="SoundDown" to="." method="_on_SoundDown_finished"]
